apertures in table

--- a/ms.tex
+++ b/ms.tex
@@ -1030,7 +1030,10 @@ NNX14AE11G).
 \include{table_photometry}
 % \end{turnpage}
 \include{table_stellarprops}
+
+\begin{turnpage}
 \include{table_planets}
+\end{turnpage}
 \include{table_fpp}
 
 \include{table_bg}
