--- a/table_bg.tex
+++ b/table_bg.tex
@@ -1,50 +1,59 @@
 \clearpage
 %\LongTables
-\begin{deluxetable*}{lcccccc}
+\begin{deluxetable*}{lccccccc}
 \tablewidth{0pt}
 \tabletypesize{\scriptsize}
 \tablecaption{Detected Companions to Candidate Host Stars \label{Tab:bg}}
 \tablehead{
 \colhead{Primary} &
-\colhead{RA (J2000)} &
-\colhead{Dec (J2000)} &
-\colhead{Detection Method} &
-\colhead{Separation (arcsec)} &
-\colhead{$\Delta r$ (mags)} &
-\colhead{Max Depth (ppt)}
+\colhead{Aperture} &
+\colhead{RA} &
+\colhead{Dec} &
+\colhead{Detection} &
+\colhead{Separation} &
+\colhead{$\Delta r$} &
+\colhead{Max Depth} \\
+\colhead{} &
+\colhead{(arcsec)} &
+\colhead{(J2000)} &
+\colhead{(J2000)} &
+\colhead{} &
+\colhead{(arcsec)} &
+\colhead{(mag)} &
+\colhead{(ppt)} 
 }
 \startdata
- 201208431  & 174.748988  & -3.902146  &  SDSS  &       $17.25 \pm 0.15\tablenotemark{1}$  & $5.90 \pm 0.12$ & 5.6 \\
- 201257461  & 178.164376  & -3.093431  &  SDSS  &       $ 12.91 \pm 0.18\tablenotemark{1}$ & $5.04 \pm 0.03$ & 4.8 \\
- 201295312  & 174.010158  & -2.522528  &  SDSS/AO &  $8.12 \pm 0.09$\tablenotemark{1}   & $7.10 \pm 0.10$ & 0.8 \\
- 201338508  & 169.308176  & -1.873647  & SDSS      &    $22.92 \pm 0.07$\tablenotemark{1} & $4.35 \pm 0.03$ & 9.1 \\
- 201367065  &                   &                       &                &                                                            &                          &            \\
- 201384232  & 178.195303 &  -1.192501  & SDSS      &   $24.14 \pm 0.06$\tablenotemark{1} & $5.93 \pm 0.03$ & 2.1 \\
- 201393098  &                   &                       &                &                                                           &                          &            \\
- 201403446  & 174.267663 &  -0.909645  & SDSS      &    $9.78 \pm 0.14$\tablenotemark{1} & $4.56 \pm 0.08$ & 7.5 \\ 
- 201445392 &                   &                       &                &                                                           &                          &            \\
- 201465501  &                   &                       &                &                                                           &                          &            \\
- 201505350  &                   &                       &                &                                                           &                          &            \\
- 201546283  & 171.515265  &  1.229950  &  SDSS/AO &  $2.98 \pm 0.05$\tablenotemark{1}   & $5.87 \pm 0.06$ & 2.3 \\
- 201549860  & 170.097556 &  1.288007    & SDSS    &    $21.21 \pm 0.05$\tablenotemark{1} & $2.26 \pm 0.03$ & 62.3 \\
- 201555883  &                   &                       &                &                                                           &                          &            \\
- 201565013 &                   &                       &                &                                                           &                          &            \\
- 201569483 &                   &                       &                &                                                           &                          &            \\
- 201577035 & 172.118116 &  1.687798    & SDSS    &  $17.19 \pm 0.12$\tablenotemark{1}  & $5.40 \pm 0.03$ & 3.5   \\
- 201596316 &                  &                       &                &                                                           &                          &            \\
- 201613023 &                  &                       &                &                                                           &                          &            \\
- 201617985 &                  &                       &                &                                                           &                          &            \\
- 201629650 & 170.158905 &  2.502107   & SDSS     & $12.30 \pm 0.14$\tablenotemark{1} &   $5.98 \pm 0.06$ & 2.0 \\
- 201635569 &                   &                       &                &                                                           &                          &            \\
- 201649426 &                   &                       &                &                                                           &                          &            \\
- 201702477 & 175.238916 &  3.678764    & SDSS     &  $12.15 \pm 0.12$\tablenotemark{1} & $4.65 \pm 0.09$ & 6.9  \\
- 201736247 &                   &                       &                &                                                           &                          &            \\
- 201754305 &                   &                       &                &                                                           &                          &            \\
- 201779067  &                   &                       &                &                                                           &                          &            \\
- 201828749  & 175.645724  &  5.894714  &   AO  &        $2.46 \pm 0.04$\tablenotemark{1}   & $ 2.0 \pm 0.1 $\tablenotemark{3} & 137  \\
- 201855371 &                   &                       &                &                                                           &                          &            \\
- 201912552 &                   &                       &                &                                                           &                          &            \\
- 201929294 &                   &                       &                &                                                           &                          &            
+ 201208431  & 15.9 & 174.748988  & -3.902146  &  SDSS  &       $17.25 \pm 0.15\tablenotemark{1}$  & $5.90 \pm 0.12$ & 5.6 \\
+ 201257461  & 19.9 & 178.164376  & -3.093431  &  SDSS  &       $ 12.91 \pm 0.18\tablenotemark{1}$ & $5.04 \pm 0.03$ & 4.8 \\
+ 201295312  & 11.9 &  174.010158  & -2.522528  &  SDSS/AO &  $8.12 \pm 0.09$\tablenotemark{1}   & $7.10 \pm 0.10$ & 0.8 \\
+ 201338508  & 15.9 & 169.308176  & -1.873647  & SDSS      &    $22.92 \pm 0.07$\tablenotemark{1} & $4.35 \pm 0.03$ & 9.1 \\
+ 201367065  & 19.9 &                  &                       &                &                                                            &                          &            \\
+ 201384232  & 13.9 & 178.195303 &  -1.192501  & SDSS      &   $24.14 \pm 0.06$\tablenotemark{1} & $5.93 \pm 0.03$ & 2.1 \\
+ 201393098  & 15.9 &                  &                       &                &                                                           &                          &            \\
+ 201403446  & 15.9 & 174.267663 &  -0.909645  & SDSS      &    $9.78 \pm 0.14$\tablenotemark{1} & $4.56 \pm 0.08$ & 7.5 \\ 
+ 201445392  & 13.9 &                &                       &                &                                                           &                          &            \\
+ 201465501  & 11.9 &                 &                       &                &                                                           &                          &            \\
+ 201505350  & 19.9 &                  &                       &                &                                                           &                          &            \\
+ 201546283  & 17.9 & 171.515265  &  1.229950  &  SDSS/AO &  $2.98 \pm 0.05$\tablenotemark{1}   & $5.87 \pm 0.06$ & 2.3 \\
+ 201549860  & 13.9 & 170.097556 &  1.288007    & SDSS    &    $21.21 \pm 0.05$\tablenotemark{1} & $2.26 \pm 0.03$ & 62.3 \\
+ 201555883  & 10.0 &                 &                       &                &                                                           &                          &            \\
+ 201565013  & 10.0 &               &                       &                &                                                           &                          &            \\
+ 201569483  & 19.9 &                 &                       &                &                                                           &                          &            \\
+ 201577035  & 19.9 & 172.118116 &  1.687798    & SDSS    &  $17.19 \pm 0.12$\tablenotemark{1}  & $5.40 \pm 0.03$ & 3.5   \\
+ 201596316  & 15.9 &                 &                       &                &                                                           &                          &            \\
+ 201613023  & 19.9 &                 &                       &                &                                                           &                          &            \\
+ 201617985  & 15.9 &                 &                       &                &                                                           &                          &            \\
+ 201629650  & 15.9 & 170.158905 &  2.502107   & SDSS     & $12.30 \pm 0.14$\tablenotemark{1} &   $5.98 \pm 0.06$ & 2.0 \\
+ 201635569  & 11.9 &                  &                       &                &                                                           &                          &            \\
+ 201649426  & 19.9 &                 &                       &                &                                                           &                          &            \\
+ 201702477  & 10.0 & 175.238916 &  3.678764    & SDSS     &  $12.15 \pm 0.12$\tablenotemark{1} & $4.65 \pm 0.09$ & 6.9  \\
+ 201736247  & 13.9 &                  &                       &                &                                                           &                          &            \\
+ 201754305  & 11.9 &                  &                       &                &                                                           &                          &            \\
+ 201779067  & 19.9 &                  &                       &                &                                                           &                          &            \\
+ 201828749  & 11.9 & 175.645724  &  5.894714  &   AO  &        $2.46 \pm 0.04$\tablenotemark{1}   & $ 2.0 \pm 0.1 $\tablenotemark{3} & 137  \\
+ 201855371  & 19.9 &                  &                       &                &                                                           &                          &            \\
+ 201912552  & 13.9 &                 &                       &                &                                                           &                          &            \\
+ 201929294  & 19.9 &                  &                       &                &                                                           &                          &            
 \enddata
 \tablenotetext{1}{Separation from AO imaging}
 \tablenotetext{2}{Separation from SDSS photometry}
