--- a/table_stellarprops.tex
+++ b/table_stellarprops.tex
@@ -8,44 +8,52 @@
 \colhead{EPIC} &
 \colhead{RA (J2000)} &
 \colhead{Dec (J2000)} &
-\colhead{Mass ($M_\odot$)} &
-\colhead{Radius ($R_\odot$)} &
-\colhead{\teff (K)} &
-\colhead{[Fe/H] (dex)} &
-\colhead{Distance (pc)} 
+\colhead{Mass} &
+\colhead{Radius} &
+\colhead{\teff} &
+\colhead{[Fe/H]} &
+\colhead{Distance} \\
+\colhead{} &
+\colhead{(Hours)} &
+\colhead{(Degrees)} &
+\colhead{($M_\odot$)} &
+\colhead{($R_\odot$)} &
+\colhead{(K)} &
+\colhead{(dex)} &
+\colhead{(pc)}
 }
 \startdata
- 201208431 & $174.745640$ & $-3.905585$ & $0.64^{+0.04}_{-0.04}$ & $0.61^{+0.03}_{-0.04}$ & $4180^{+  41}_{ -45}$ & $-0.05^{+0.18}_{-0.18}$ & $ 222^{+  13}_{ -17}$ \\ 
- 201257461 & $178.161109$ & $-3.094936$ & $0.66^{+0.06}_{-0.04}$ & $0.63^{+0.06}_{-0.04}$ & $4809^{+  46}_{ -37}$ & $-0.47^{+0.22}_{-0.28}$ & $  91^{+  10}_{  -6}$ \\ 
- 201295312 & $174.011630$ & $-2.520881$ & $1.05^{+0.06}_{-0.08}$ & $1.01^{+0.10}_{-0.07}$ & $5942^{+  80}_{ -73}$ & $-0.02^{+0.17}_{-0.20}$ & $ 307^{+  31}_{ -24}$ \\ 
- 201338508 & $169.303502$ & $-1.877976$ & $0.58^{+0.07}_{-0.06}$ & $0.56^{+0.06}_{-0.05}$ & $4135^{+  57}_{ -70}$ & $-0.29^{+0.26}_{-0.22}$ & $ 199^{+  25}_{ -22}$ \\ 
- 201367065 & $172.334949$ & $-1.454787$ & $0.56^{+0.04}_{-0.04}$ & $0.54^{+0.03}_{-0.04}$ & $3943^{+  34}_{ -43}$ & $-0.16^{+0.16}_{-0.15}$ & $  45^{+   3}_{  -4}$ \\ 
- 201384232 & $178.192260$ & $-1.198477$ & $0.98^{+0.06}_{-0.07}$ & $0.94^{+0.08}_{-0.07}$ & $5772^{+  82}_{ -80}$ & $-0.05^{+0.18}_{-0.20}$ & $ 335^{+  30}_{ -28}$ \\ 
- 201393098 & $167.093771$ & $-1.065755$ & $0.97^{+0.05}_{-0.06}$ & $0.91^{+0.06}_{-0.06}$ & $5688^{+  71}_{ -67}$ & $-0.04^{+0.19}_{-0.19}$ & $ 405^{+  29}_{ -28}$ \\ 
- 201403446 & $174.266344$ & $-0.907261$ & $1.13^{+0.11}_{-0.14}$ & $1.15^{+0.14}_{-0.17}$ & $6340^{+  70}_{ -68}$ & $-0.14^{+0.20}_{-0.34}$ & $ 372^{+  53}_{ -58}$ \\ 
- 201445392 & $169.793665$ & $-0.284375$ & $0.75^{+0.05}_{-0.07}$ & $0.71^{+0.03}_{-0.07}$ & $4813^{+  43}_{ -44}$ & $-0.10^{+0.20}_{-0.26}$ & $ 386^{+  21}_{ -40}$ \\ 
- 201465501 & $176.264468$ & $0.005301$ & $0.32^{+0.09}_{-0.10}$ & $0.32^{+0.08}_{-0.09}$ & $3453^{+  53}_{ -39}$ & $-0.18^{+0.19}_{-0.25}$ & $  84^{+  25}_{ -25}$ \\ 
- 201505350 & $174.960319$ & $0.603575$ & $0.84^{+0.06}_{-0.10}$ & $0.79^{+0.07}_{-0.10}$ & $5408^{+  48}_{ -50}$ & $-0.23^{+0.20}_{-0.38}$ & $ 280^{+  26}_{ -38}$ \\ 
- 201546283 & $171.515165$ & $1.230738$ & $0.86^{+0.05}_{-0.08}$ & $0.80^{+0.04}_{-0.07}$ & $5290^{+  48}_{ -54}$ & $-0.09^{+0.21}_{-0.27}$ & $ 226^{+  14}_{ -22}$ \\ 
- 201549860 & $170.103081$ & $1.285956$ & $0.71^{+0.04}_{-0.05}$ & $0.67^{+0.02}_{-0.04}$ & $4480^{+  46}_{ -46}$ & $-0.01^{+0.19}_{-0.18}$ & $ 242^{+  12}_{ -15}$ \\ 
- 201555883 & $176.075940$ & $1.375947$ & $0.61^{+0.03}_{-0.07}$ & $0.59^{+0.02}_{-0.06}$ & $4404^{+  42}_{ -43}$ & $-0.39^{+0.13}_{-0.42}$ & $ 331^{+  18}_{ -39}$ \\ 
- 201565013 & $176.992193$ & $1.510249$ & $0.51^{+0.11}_{-0.04}$ & $0.50^{+0.10}_{-0.04}$ & $3955^{+  89}_{ -51}$ & $-0.42^{+0.42}_{-0.15}$ & $ 501^{+ 121}_{ -50}$ \\ 
- 201569483 & $167.171299$ & $1.577513$ & $0.83^{+0.04}_{-0.06}$ & $0.77^{+0.04}_{-0.05}$ & $5111^{+  54}_{ -51}$ & $-0.04^{+0.19}_{-0.22}$ & $ 147^{+   8}_{ -11}$ \\ 
- 201577035 & $172.121957$ & $1.690636$ & $0.93^{+0.05}_{-0.06}$ & $0.88^{+0.06}_{-0.05}$ & $5553^{+  63}_{ -63}$ & $-0.04^{+0.18}_{-0.18}$ & $ 256^{+  19}_{ -17}$ \\ 
- 201596316 & $169.042002$ & $1.986840$ & $0.83^{+0.07}_{-0.11}$ & $0.77^{+0.05}_{-0.10}$ & $5254^{+  46}_{ -50}$ & $-0.16^{+0.25}_{-0.38}$ & $ 297^{+  24}_{ -41}$ \\ 
- 201613023 & $173.192036$ & $2.244884$ & $0.96^{+0.05}_{-0.08}$ & $0.90^{+0.06}_{-0.08}$ & $5687^{+  59}_{ -60}$ & $-0.06^{+0.18}_{-0.26}$ & $ 259^{+  20}_{ -22}$ \\ 
- 201617985 & $179.491659$ & $2.321476$ & $0.50^{+0.04}_{-0.06}$ & $0.48^{+0.03}_{-0.06}$ & $3681^{+  43}_{ -47}$ & $-0.04^{+0.15}_{-0.18}$ & $ 106^{+  10}_{ -15}$ \\ 
- 201629650 & $170.155528$ & $2.502696$ & $0.83^{+0.08}_{-0.07}$ & $0.78^{+0.08}_{-0.06}$ & $5569^{+  57}_{ -56}$ & $-0.37^{+0.24}_{-0.26}$ & $ 288^{+  33}_{ -24}$ \\ 
- 201635569 & $178.057026$ & $2.594245$ & $0.50^{+0.08}_{-0.04}$ & $0.48^{+0.08}_{-0.04}$ & $3829^{+  74}_{ -45}$ & $-0.31^{+0.30}_{-0.10}$ & $ 237^{+  48}_{ -24}$ \\ 
- 201649426 & $177.234262$ & $2.807619$ & $0.64^{+0.07}_{-0.05}$ & $0.61^{+0.06}_{-0.05}$ & $4701^{+  53}_{ -47}$ & $-0.52^{+0.28}_{-0.35}$ & $ 183^{+  20}_{ -19}$ \\ 
- 201702477 & $175.240794$ & $3.681584$ & $0.92^{+0.05}_{-0.07}$ & $0.87^{+0.06}_{-0.06}$ & $5551^{+  72}_{ -66}$ & $-0.08^{+0.17}_{-0.20}$ & $ 684^{+  51}_{ -52}$ \\ 
- 201736247 & $178.110797$ & $4.254747$ & $0.80^{+0.05}_{-0.07}$ & $0.76^{+0.04}_{-0.07}$ & $5114^{+  56}_{ -57}$ & $-0.14^{+0.17}_{-0.26}$ & $ 486^{+  29}_{ -45}$ \\ 
- 201754305 & $175.097258$ & $4.557340$ & $0.67^{+0.06}_{-0.05}$ & $0.64^{+0.05}_{-0.05}$ & $4717^{+  40}_{ -39}$ & $-0.35^{+0.21}_{-0.29}$ & $ 325^{+  27}_{ -25}$ \\ 
- 201779067 & $168.542699$ & $4.988131$ & $0.91^{+0.10}_{-0.06}$ & $0.89^{+0.15}_{-0.08}$ & $6009^{+  51}_{ -53}$ & $-0.45^{+0.25}_{-0.22}$ & $ 180^{+  33}_{ -18}$ \\ 
- 201828749 & $175.654342$ & $5.894323$ & $0.85^{+0.07}_{-0.10}$ & $0.80^{+0.07}_{-0.09}$ & $5437^{+  56}_{ -51}$ & $-0.23^{+0.24}_{-0.35}$ & $ 162^{+  15}_{ -20}$ \\ 
- 201855371 & $178.329775$ & $6.412261$ & $0.68^{+0.03}_{-0.05}$ & $0.64^{+0.02}_{-0.04}$ & $4288^{+  41}_{ -41}$ & $0.01^{+0.19}_{-0.20}$ & $ 131^{+   6}_{  -9}$ \\ 
- 201912552\tablenotemark{1} & $172.560460$ & $7.588391$ & $0.413^{+0.043}_{-0.043}$ & $0.394^{+0.038}_{-0.038}$ & $3503^{+  60}_{ -60}$ & $0.09^{+0.09}_{-0.09}$ & $  34^{+   4}_{  -4}$ \\ 
- 201929294 & $174.656969$ & $7.959611$ & $0.73^{+0.06}_{-0.09}$ & $0.70^{+0.04}_{-0.08}$ & $4786^{+  48}_{ -53}$ & $-0.16^{+0.22}_{-0.34}$ & $ 197^{+  13}_{ -24}$ 
+ 201208431 & $11.6497093$ & $-3.905585$ & $0.64^{+0.04}_{-0.04}$ & $0.61^{+0.03}_{-0.04}$ & $4180^{+  41}_{ -45}$ & $-0.05^{+0.18}_{-0.18}$ & $ 222^{+  13}_{ -17}$ \\ 
+ 201257461 & $11.8774073$ & $-3.094936$ & $0.66^{+0.06}_{-0.04}$ & $0.63^{+0.06}_{-0.04}$ & $4809^{+  46}_{ -37}$ & $-0.47^{+0.22}_{-0.28}$ & $  91^{+  10}_{  -6}$ \\ 
+ 201295312 & $11.6007753$ & $-2.520881$ & $1.05^{+0.06}_{-0.08}$ & $1.01^{+0.10}_{-0.07}$ & $5942^{+  80}_{ -73}$ & $-0.02^{+0.17}_{-0.20}$ & $ 307^{+  31}_{ -24}$ \\ 
+ 201338508 & $11.2869001$ & $-1.877976$ & $0.58^{+0.07}_{-0.06}$ & $0.56^{+0.06}_{-0.05}$ & $4135^{+  57}_{ -70}$ & $-0.29^{+0.26}_{-0.22}$ & $ 199^{+  25}_{ -22}$ \\ 
+ 201367065 & $11.4889966$ & $-1.454787$ & $0.56^{+0.04}_{-0.04}$ & $0.54^{+0.03}_{-0.04}$ & $3943^{+  34}_{ -43}$ & $-0.16^{+0.16}_{-0.15}$ & $  45^{+   3}_{  -4}$ \\ 
+ 201384232 & $11.8794840$ & $-1.198477$ & $0.98^{+0.06}_{-0.07}$ & $0.94^{+0.08}_{-0.07}$ & $5772^{+  82}_{ -80}$ & $-0.05^{+0.18}_{-0.20}$ & $ 335^{+  30}_{ -28}$ \\ 
+ 201393098 & $11.1395847$ & $-1.065755$ & $0.97^{+0.05}_{-0.06}$ & $0.91^{+0.06}_{-0.06}$ & $5688^{+  71}_{ -67}$ & $-0.04^{+0.19}_{-0.19}$ & $ 405^{+  29}_{ -28}$ \\ 
+ 201403446 & $11.6177563$ & $-0.907261$ & $1.13^{+0.11}_{-0.14}$ & $1.15^{+0.14}_{-0.17}$ & $6340^{+  70}_{ -68}$ & $-0.14^{+0.20}_{-0.34}$ & $ 372^{+  53}_{ -58}$ \\ 
+ 201445392 & $11.3195777$ & $-0.284375$ & $0.75^{+0.05}_{-0.07}$ & $0.71^{+0.03}_{-0.07}$ & $4813^{+  43}_{ -44}$ & $-0.10^{+0.20}_{-0.26}$ & $ 386^{+  21}_{ -40}$ \\ 
+ 201465501 & $11.7509645$ & $0.005301$ & $0.32^{+0.09}_{-0.10}$ & $0.32^{+0.08}_{-0.09}$ & $3453^{+  53}_{ -39}$ & $-0.18^{+0.19}_{-0.25}$ & $  84^{+  25}_{ -25}$ \\ 
+ 201505350 & $11.6640213$ & $0.603575$ & $0.84^{+0.06}_{-0.10}$ & $0.79^{+0.07}_{-0.10}$ & $5408^{+  48}_{ -50}$ & $-0.23^{+0.20}_{-0.38}$ & $ 280^{+  26}_{ -38}$ \\ 
+ 201546283 & $11.4343443$ & $1.230738$ & $0.86^{+0.05}_{-0.08}$ & $0.80^{+0.04}_{-0.07}$ & $5290^{+  48}_{ -54}$ & $-0.09^{+0.21}_{-0.27}$ & $ 226^{+  14}_{ -22}$ \\ 
+ 201549860 & $11.3402054$ & $1.285956$ & $0.71^{+0.04}_{-0.05}$ & $0.67^{+0.02}_{-0.04}$ & $4480^{+  46}_{ -46}$ & $-0.01^{+0.19}_{-0.18}$ & $ 242^{+  12}_{ -15}$ \\ 
+ 201555883 & $11.7383960$ & $1.375947$ & $0.61^{+0.03}_{-0.07}$ & $0.59^{+0.02}_{-0.06}$ & $4404^{+  42}_{ -43}$ & $-0.39^{+0.13}_{-0.42}$ & $ 331^{+  18}_{ -39}$ \\ 
+ 201565013 & $11.7994795$ & $1.510249$ & $0.51^{+0.11}_{-0.04}$ & $0.50^{+0.10}_{-0.04}$ & $3955^{+  89}_{ -51}$ & $-0.42^{+0.42}_{-0.15}$ & $ 501^{+ 121}_{ -50}$ \\ 
+ 201569483 & $11.1447533$ & $1.577513$ & $0.83^{+0.04}_{-0.06}$ & $0.77^{+0.04}_{-0.05}$ & $5111^{+  54}_{ -51}$ & $-0.04^{+0.19}_{-0.22}$ & $ 147^{+   8}_{ -11}$ \\ 
+ 201577035 & $11.4747971$ & $1.690636$ & $0.93^{+0.05}_{-0.06}$ & $0.88^{+0.06}_{-0.05}$ & $5553^{+  63}_{ -63}$ & $-0.04^{+0.18}_{-0.18}$ & $ 256^{+  19}_{ -17}$ \\ 
+ 201596316 & $11.2694668$ & $1.986840$ & $0.83^{+0.07}_{-0.11}$ & $0.77^{+0.05}_{-0.10}$ & $5254^{+  46}_{ -50}$ & $-0.16^{+0.25}_{-0.38}$ & $ 297^{+  24}_{ -41}$ \\ 
+ 201613023 & $11.5461357$ & $2.244884$ & $0.96^{+0.05}_{-0.08}$ & $0.90^{+0.06}_{-0.08}$ & $5687^{+  59}_{ -60}$ & $-0.06^{+0.18}_{-0.26}$ & $ 259^{+  20}_{ -22}$ \\ 
+ 201617985 & $11.9661106$ & $2.321476$ & $0.50^{+0.04}_{-0.06}$ & $0.48^{+0.03}_{-0.06}$ & $3681^{+  43}_{ -47}$ & $-0.04^{+0.15}_{-0.18}$ & $ 106^{+  10}_{ -15}$ \\ 
+ 201629650 & $11.3437019$ & $2.502696$ & $0.83^{+0.08}_{-0.07}$ & $0.78^{+0.08}_{-0.06}$ & $5569^{+  57}_{ -56}$ & $-0.37^{+0.24}_{-0.26}$ & $ 288^{+  33}_{ -24}$ \\ 
+ 201635569 & $11.8704684$ & $2.594245$ & $0.50^{+0.08}_{-0.04}$ & $0.48^{+0.08}_{-0.04}$ & $3829^{+  74}_{ -45}$ & $-0.31^{+0.30}_{-0.10}$ & $ 237^{+  48}_{ -24}$ \\ 
+ 201649426 & $11.8156175$ & $2.807619$ & $0.64^{+0.07}_{-0.05}$ & $0.61^{+0.06}_{-0.05}$ & $4701^{+  53}_{ -47}$ & $-0.52^{+0.28}_{-0.35}$ & $ 183^{+  20}_{ -19}$ \\ 
+ 201702477 & $11.6827196$ & $3.681584$ & $0.92^{+0.05}_{-0.07}$ & $0.87^{+0.06}_{-0.06}$ & $5551^{+  72}_{ -66}$ & $-0.08^{+0.17}_{-0.20}$ & $ 684^{+  51}_{ -52}$ \\ 
+ 201736247 & $11.8740531$ & $4.254747$ & $0.80^{+0.05}_{-0.07}$ & $0.76^{+0.04}_{-0.07}$ & $5114^{+  56}_{ -57}$ & $-0.14^{+0.17}_{-0.26}$ & $ 486^{+  29}_{ -45}$ \\ 
+ 201754305 & $11.6731505$ & $4.557340$ & $0.67^{+0.06}_{-0.05}$ & $0.64^{+0.05}_{-0.05}$ & $4717^{+  40}_{ -39}$ & $-0.35^{+0.21}_{-0.29}$ & $ 325^{+  27}_{ -25}$ \\ 
+ 201779067 & $11.2361799$ & $4.988131$ & $0.91^{+0.10}_{-0.06}$ & $0.89^{+0.15}_{-0.08}$ & $6009^{+  51}_{ -53}$ & $-0.45^{+0.25}_{-0.22}$ & $ 180^{+  33}_{ -18}$ \\ 
+ 201828749 & $11.7102895$ & $5.894323$ & $0.85^{+0.07}_{-0.10}$ & $0.80^{+0.07}_{-0.09}$ & $5437^{+  56}_{ -51}$ & $-0.23^{+0.24}_{-0.35}$ & $ 162^{+  15}_{ -20}$ \\ 
+ 201855371 & $11.8886517$ & $6.412261$ & $0.68^{+0.03}_{-0.05}$ & $0.64^{+0.02}_{-0.04}$ & $4288^{+  41}_{ -41}$ & $0.01^{+0.19}_{-0.20}$ & $ 131^{+   6}_{  -9}$ \\ 
+ 201912552\tablenotemark{1} & $11.5040307$ & $7.588391$ & $0.413^{+0.043}_{-0.043}$ & $0.394^{+0.038}_{-0.038}$ & $3503^{+  60}_{ -60}$ & $0.09^{+0.09}_{-0.09}$ & $  34^{+   4}_{  -4}$ \\ 
+ 201929294 & $11.6437979$ & $7.959611$ & $0.73^{+0.06}_{-0.09}$ & $0.70^{+0.04}_{-0.08}$ & $4786^{+  48}_{ -53}$ & $-0.16^{+0.22}_{-0.34}$ & $ 197^{+  13}_{ -24}$ \\ 
 \enddata
 \tablecomments{These values and their uncertainties are derived from MCMC samplings and the
 numbers are computed as the 0.158, 0.500, and 0.842 posterior sample quantiles. 
