--- a/exopapers.bib
+++ b/exopapers.bib
@@ -1751,6 +1751,26 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+
+@ARTICLE{Desert15,
+   author = {{D{\'e}sert}, J.-M. and {Charbonneau}, D. and {Torres}, G. and 
+	{Fressin}, F. and {Ballard}, S. and {Bryson}, S.~T. and {Knutson}, H.~A. and 
+	{Batalha}, N.~M. and {Borucki}, W.~J. and {Brown}, T.~M. and 
+	{Deming}, D. and {Ford}, E.~B. and {Fortney}, J.~J. and {Gilliland}, R.~L. and 
+	{Latham}, D.~W. and {Seager}, S.},
+    title = "{Low False-Positive Rate of Kepler Candidates Estimated From A Combination Of Spitzer And Follow-Up Observations}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1503.03173},
+ primaryClass = "astro-ph.EP",
+ keywords = {Astrophysics - Earth and Planetary Astrophysics},
+     year = 2015,
+    month = mar,
+   adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150303173D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{Diaz13,
    author = {{D{\'{\i}}az}, R.~F. and {Damiani}, C. and {Deleuil}, M. and
 	{Almenara}, J.~M. and {Moutou}, C. and {Barros}, S.~C.~C. and
@@ -4458,19 +4478,24 @@ archivePrefix = "arXiv",
 
 
 
-@ARTICLE{Morton13,
-   author = {{Morton}, T.~D. and {Swift}, J.~J.},
-    title = "{The Radius Distribution of Small Planets Around Cool Stars}",
-  journal = {ArXiv e-prints},
+@ARTICLE{Morton14,
+   author = {{Morton}, T.~D. and {Swift}, J.},
+    title = "{The Radius Distribution of Planets around Cool Stars}",
+  journal = {\apj},
 archivePrefix = "arXiv",
    eprint = {1303.3013},
  primaryClass = "astro-ph.EP",
- keywords = {Astrophysics - Earth and Planetary Astrophysics},
-     year = 2013,
-    month = mar,
-   adsurl = {http://adsabs.harvard.edu/abs/2013arXiv1303.3013M},
+ keywords = {methods: statistical, planets and satellites: fundamental parameters},
+     year = 2014,
+    month = aug,
+   volume = 791,
+      eid = {10},
+    pages = {10},
+      doi = {10.1088/0004-637X/791/1/10},
+   adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...791...10M},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
 
 @ARTICLE{Moutou13,
    author = {{Moutou}, C. and {Bonomo}, A.~S. and {Bruno}, G. and {Montagnier}, G. and
